[project]
name = "ComfyUI-DynamicPromptComposer"
version = "1.0.0"
description = "ComfyUI custom node for building varied prompts across batch generations using sections and per-section pick modes."
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/Alatza/ComfyUI-DynamicPromptComposer"
